acessibilidade (aria, alt e tabelas)

--- a/pages/artigo_projeto.html
+++ b/pages/artigo_projeto.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="../index.html#artigos" class="button-voltar"><i class="bi bi-caret-left-fill"></i> <p>voltar</p></a>
-        <img src="../utils/img/logo_site_branca.png" alt="">
+        <a href="../index.html#artigos" class="button-voltar" aria-label="Voltar para a seção Artigos na página inicial"><i class="bi bi-caret-left-fill" aria-hidden="true"></i> <p>voltar</p></a>
+        <img src="../utils/img/logo_site_branca.png" alt="Logo Inclusão Digital">
     </header>
 
     <main class="artigo-principal-section">
@@ -30,7 +30,7 @@
                 <span>Escrito por: <strong>Sônia Pádua</strong></span>
             </div>
 
-            <img src="../utils/img/aula_no_compaz.jpg" alt="Imagem sobre o artigo" class="artigo-principal-imagem">
+            <img src="../utils/img/aula_no_compaz.jpg" alt="Bolsista do projeto ministra uma aula na biblioteca do COMPAZ. Ele está em pé, apontando para um slide em um projetor, enquanto os participantes assistem em seus computadores." class="artigo-principal-imagem">
         </div>
 
         <div class="artigo-principal-corpo">
