--- a/pages/artigo_relatorio.html
+++ b/pages/artigo_relatorio.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <a href="../index.html#projeto" class="button-voltar"><i class="bi bi-caret-left-fill"></i> <p>voltar</p></a>
-        <img src="../utils/img/logo_site_branca.png" alt="">
+        <a href="../index.html#projeto" class="button-voltar" aria-label="Voltar para a seção Projeto na página inicial"><i class="bi bi-caret-left-fill" aria-hidden="true"></i> <p>voltar</p></a>
+        <img src="../utils/img/logo_site_branca.png" alt="Logo Inclusão Digital">
     </header>
 
     <main class="artigo-principal-section">
@@ -69,12 +69,14 @@
             <div class="table-container">
             <table>
                 <thead>
+
                 <tr>
-                    <th>EQUIPE</th>
-                    <th>FUNÇÃO NO PROJETO</th>
-                    <th>FUNÇÃO NA ETEPAC</th>
+                    <th scope="col">EQUIPE</th>
+                    <th scope="col">FUNÇÃO NO PROJETO</th>
+                    <th scope="col">FUNÇÃO NA ETEPAC</th>
                 </tr>
                 </thead>
+
                 <tbody>
                 <tr>
                     <td>Sônia Maria de Pádua</td>
@@ -141,7 +143,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../utils/img/grafico_genero_bolsistas.png" alt="Gráfico de pizza sobre público estudantil por gênero" class="grafico">
+            <img src="../utils/img/grafico_genero_bolsistas.png" alt="" class="grafico">
             </div>
 
             <p>
@@ -151,11 +153,13 @@
             <div class="table-container">
             <table>
                 <thead>
+                    
                 <tr>
-                    <th>CURSO</th>
-                    <th>QUANTIDADE DE ALUNOS</th>
+                    <th scope="col">CURSO</th>
+                    <th scope="col">QUANTIDADE DE ALUNOS</th>
                 </tr>
                 </thead>
+
                 <tbody>
                 <tr>
                     <td>Desenvolvimento de Sistemas</td>
@@ -187,7 +191,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../utils/img/distribuicao_pe.png" alt="Distribuição dos bolsistas por cidade">
+            <img src="../utils/img/distribuicao_pe.png" alt="Mapa da distribuição dos bolsistas em Pernambuco. As cidades listadas são: Recife, Olinda, Jaboatão dos Guararapes, São Lourenço da Mata, São Caetano e Petrolina.">
             </div>
 
             <h2>Extensão do curso de Inclusão Digital no COMPAZ</h2>
@@ -224,7 +228,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../utils/img/grafico_genero_alunos.png" alt="Gráfico de pizza sobre alunos do COMPAZ por gênero">
+            <img src="../utils/img/grafico_genero_alunos.png" alt="">
             </div>
 
             <p>
@@ -232,7 +236,7 @@
             </p>
 
             <div class="grafico">
-            <img src="../utils/img/grafico_idade.png" alt="Gráfico de pizza sobre alunos do COMPAZ por idade">
+            <img src="../utils/img/grafico_idade.png" alt="Gráfico de pizza da Classificação etária do público. Os dados mostram a distribuição: Adolescente (33,3%), Idoso(a) (33,3%), Adulto (19,0%) e Adulto Jovem (14,3%).">
             </div>
             
             <h4>Participação e carga horária</h4>
@@ -243,23 +247,27 @@
             <div class="table-container">
             <table class="curso-tabela">
                 <thead>
+
                 <tr>
                     <th colspan="3">CURSO: INCLUSÃO DIGITAL PARA JOVENS E ADULTOS</th>
                 </tr>
+
                 <tr>
-                    <td class="subgroup">ALUNOS</td>
-                    <td class="subgroup">PERÍODO DO CURSO</td>
-                    <td class="subgroup">CARGA HORÁRIA SEMANAL</td>
+                    <th scope="col" class="subgroup">ALUNOS</th>
+                    <th scope="col" class="subgroup">PERÍODO DO CURSO</th>
+                    <th scope="col" class="subgroup">CARGA HORÁRIA SEMANAL</th>
                 </tr>
                 </thead>
+
                 <tbody>
                 <tr>
                     <td>21 alunos</td>
                     <td>4 turmas: 15/09 a 03/20/2025</td>
                     <td>10 horas</td>
                 </tr>
+
                 <tr class="total-tabela">
-                    <th colspan="4">TOTAL DE HORAS DO CURSO: 40 horas</th>
+                    <th colspan="3">TOTAL DE HORAS DO CURSO: 40 horas</th>
                 </tr>
                 </tbody>
             </table>
@@ -276,14 +284,16 @@
             <div class="table-container">
             <table>
                 <thead>
+
                 <tr>
-                    <th colspan="3">GRUPOS</th>
+                    <th colspan="2">GRUPOS</th>
                 </tr>
                 </thead>
+
                 <tbody>
                 <tr>
-                    <td class="subgroup">REDAÇÃO</td>
-                    <td class="subgroup">INSTAGRAM</td>
+                    <th scope="col" class="subgroup">REDAÇÃO</th>
+                    <th scope="col" class="subgroup">INSTAGRAM</th>
                 </tr>
                 <tr>
                     <td>Ruth Pereira da Silva</td>
@@ -297,10 +307,12 @@
                     <td>Glébson Pedro da Silva</td>
                     <td>Valmir Pereira da Silva</td>
                 </tr>
+                </tbody>
 
+                <tbody>
                 <tr>
-                    <td class="subgroup">MONITORAMENTO DO CRONOGRAMA</td>
-                    <td class="subgroup">ELABORAÇÃO DO SITE</td>
+                    <th scope="col" class="subgroup">MONITORAMENTO DO CRONOGRAMA</th>
+                    <th scope="col" class="subgroup">ELABORAÇÃO DO SITE</th>
                 </tr>
                 <tr>
                     <td>Leonardo da Silva Felipe</td>
@@ -314,16 +326,19 @@
                     <td></td>
                     <td>Júlio Rasec Cabral Marques da Silva</td>
                 </tr>
+                </tbody>
 
+                <tbody>
                 <tr>
-                    <td class="subgroup">ELABORAÇÃO DO VÍDEO</td>
-                    <td class="subgroup">ANÁLISE DE DADOS</td>
+                    <th scope="col" class="subgroup">ELABORAÇÃO DO VÍDEO</th>
+                    <th scope="col" class="subgroup">ANÁLISE DE DADOS</th>
                 </tr>
                 <tr>
                     <td>Andryene da Mota Rodrigues</td>
                     <td>Rayane Mireli Silva Gomes</td>
                 </tr>
                 </tbody>
+
             </table>
             </div>
 
