correção de leitura de tabelas

--- a/pages/artigo_relatorio.html
+++ b/pages/artigo_relatorio.html
@@ -71,67 +71,67 @@
                 <thead>
 
                 <tr>
-                    <th scope="col">EQUIPE</th>
-                    <th scope="col">FUNÇÃO NO PROJETO</th>
-                    <th scope="col">FUNÇÃO NA ETEPAC</th>
+                    <th id="h-equipe" scope="col">EQUIPE</th>
+                    <th id="h-funcao-proj" scope="col">FUNÇÃO NO PROJETO</th>
+                    <th id="h-funcao-etepac" scope="col">FUNÇÃO NA ETEPAC</th>
                 </tr>
                 </thead>
 
                 <tbody>
                 <tr>
-                    <td>Sônia Maria de Pádua</td>
-                    <td>Coordenadora</td>
-                    <td>Professora de Biblioteconomia</td>
+                    <td headers="h-equipe">Sônia Maria de Pádua</td>
+                    <td headers="h-funcao-proj">Coordenadora</td>
+                    <td headers="h-funcao-etepac">Professora de Biblioteconomia</td>
                 </tr>
                 <tr>
-                    <td>Fagner Barbosa Silva Pontes</td>
-                    <td>Professor</td>
-                    <td>Professor de Desenvolvimento de Sistemas</td>
+                    <td headers="h-equipe">Fagner Barbosa Silva Pontes</td>
+                    <td headers="h-funcao-proj">Professor</td>
+                    <td headers="h-funcao-etepac">Professor de Desenvolvimento de Sistemas</td>
                 </tr>
                 <tr>
-                    <td>Andryene da Mota Rodrigues</td>
-                    <td>Bolsista</td>
-                    <td>Aluna do Técnico em Administração</td>
+                    <td headers="h-equipe">Andryene da Mota Rodrigues</td>
+                    <td headers="h-funcao-proj">Bolsista</td>
+                    <td headers="h-funcao-etepac">Aluna do Técnico em Administração</td>
                 </tr>
                 <tr>
-                    <td>Carlos Henrique Correia dos Santos</td>
-                    <td>Bolsista</td>
-                    <td>Aluno do Técnico em Design Gráfico</td>
+                    <td headers="h-equipe">Carlos Henrique Correia dos Santos</td>
+                    <td headers="h-funcao-proj">Bolsista</td>
+                    <td headers="h-funcao-etepac">Aluno do Técnico em Design Gráfico</td>
                 </tr>
                 <tr>
-                    <td>Glébson Pedro da Silva</td>
-                    <td>Bolsista</td>
-                    <td>Aluno do Técnico em Logística</td>
+                    <td headers="h-equipe">Glébson Pedro da Silva</td>
+                    <td headers="h-funcao-proj">Bolsista</td>
+                    <td headers="h-funcao-etepac">Aluno do Técnico em Logística</td>
                 </tr>
                 <tr>
-                    <td>Jaquelyne Alves da Silva</td>
-                    <td>Bolsista</td>
-                    <td>Aluna do Técnico em Tradução e Interpretação de LIBRAS</td>
+                    <td headers="h-equipe">Jaquelyne Alves da Silva</td>
+                    <td headers="h-funcao-proj">Bolsista</td>
+                    <td headers="h-funcao-etepac">Aluna do Técnico em Tradução e Interpretação de LIBRAS</td>
                 </tr>
                 <tr>
-                    <td>Júlio Rasec Cabral Marques da Silva</td>
-                    <td>Bolsista</td>
-                    <td>Aluno do Técnico em Desenvolvimento de Sistemas</td>
+                    <td headers="h-equipe">Júlio Rasec Cabral Marques da Silva</td>
+                    <td headers="h-funcao-proj">Bolsista</td>
+                    <td headers="h-funcao-etepac">Aluno do Técnico em Desenvolvimento de Sistemas</td>
                 </tr>
                 <tr>
-                    <td>Leonardo da Silva Felipe</td>
-                    <td>Bolsista</td>
-                    <td>Aluno do Técnico em Logística</td>
+                    <td headers="h-equipe">Leonardo da Silva Felipe</td>
+                    <td headers="h-funcao-proj">Bolsista</td>
+                    <td headers="h-funcao-etepac">Aluno do Técnico em Logística</td>
                 </tr>
                 <tr>
-                    <td>Rayane Mireli Silva Gomes</td>
-                    <td>Bolsista</td>
-                    <td>Aluna do Técnico em Desenvolvimento de Sistemas</td>
+                    <td headers="h-equipe">Rayane Mireli Silva Gomes</td>
+                    <td headers="h-funcao-proj">Bolsista</td>
+                    <td headers="h-funcao-etepac">Aluna do Técnico em Desenvolvimento de Sistemas</td>
                 </tr>
                 <tr>
-                    <td>Ruth Pereira da Silva</td>
-                    <td>Bolsista</td>
-                    <td>Aluna do Técnico em Logística</td>
+                    <td headers="h-equipe">Ruth Pereira da Silva</td>
+                    <td headers="h-funcao-proj">Bolsista</td>
+                    <td headers="h-funcao-etepac">Aluna do Técnico em Logística</td>
                 </tr>
                 <tr>
-                    <td>Valmir Pereira da Silva</td>
-                    <td>Bolsista</td>
-                    <td>Aluno do Técnico em Desenvolvimento de Sistemas</td>
+                    <td headers="h-equipe">Valmir Pereira da Silva</td>
+                    <td headers="h-funcao-proj">Bolsista</td>
+                    <td headers="h-funcao-etepac">Aluno do Técnico em Desenvolvimento de Sistemas</td>
                 </tr>
                 </tbody>
             </table>
@@ -155,31 +155,31 @@
                 <thead>
                     
                 <tr>
-                    <th scope="col">CURSO</th>
-                    <th scope="col">QUANTIDADE DE ALUNOS</th>
+                    <th id="h-curso" scope="col">CURSO</th>
+                    <th id="h-qtd" scope="col">QUANTIDADE DE ALUNOS</th>
                 </tr>
                 </thead>
 
                 <tbody>
                 <tr>
-                    <td>Desenvolvimento de Sistemas</td>
-                    <td>3</td>
+                    <td headers="h-curso">Desenvolvimento de Sistemas</td>
+                    <td headers="h-qtd">3</td>
                 </tr>
                 <tr>
-                    <td>Logística</td>
-                    <td>3</td>
+                    <td headers="h-curso">Logística</td>
+                    <td headers="h-qtd">3</td>
                 </tr>
                 <tr>
-                    <td>Administração</td>
-                    <td>1</td>
+                    <td headers="h-curso">Administração</td>
+                    <td headers="h-qtd">1</td>
                 </tr>
                 <tr>
-                    <td>Design Gráfico</td>
-                    <td>1</td>
+                    <td headers="h-curso">Design Gráfico</td>
+                    <td headers="h-qtd">1</td>
                 </tr>
                 <tr>
-                    <td>Tradução e Interpretação de LIBRAS</td>
-                    <td>1</td>
+                    <td headers="h-curso">Tradução e Interpretação de LIBRAS</td>
+                    <td headers="h-qtd">1</td>
                 </tr>
                 </tbody>
             </table>
@@ -253,17 +253,17 @@
                 </tr>
 
                 <tr>
-                    <th scope="col" class="subgroup">ALUNOS</th>
-                    <th scope="col" class="subgroup">PERÍODO DO CURSO</th>
-                    <th scope="col" class="subgroup">CARGA HORÁRIA SEMANAL</th>
+                    <th scope="col" class="subgroup" id="h-alunos">ALUNOS>ALUNOS</th>
+                    <th scope="col" class="subgroup" id="h-periodo">PERÍODO DO CURSO</th>
+                    <th scope="col" class="subgroup" id="h-carga">CARGA HORÁRIA SEMANAL</th>
                 </tr>
                 </thead>
 
                 <tbody>
                 <tr>
-                    <td>21 alunos</td>
-                    <td>4 turmas: 15/09 a 03/20/2025</td>
-                    <td>10 horas</td>
+                    <td headers="h-alunos">21 alunos</td>
+                    <td headers="h-periodo">4 turmas: 15/09 a 03/20/2025</td>
+                    <td headers="h-carga">10 horas</td>
                 </tr>
 
                 <tr class="total-tabela">
@@ -290,52 +290,52 @@
                 </tr>
                 </thead>
 
-                <tbody>
+                <tbody id="grupo-redacao-insta">
                 <tr>
-                    <th scope="col" class="subgroup">REDAÇÃO</th>
-                    <th scope="col" class="subgroup">INSTAGRAM</th>
+                    <th scope="col" class="subgroup" id="h-redacao">REDAÇÃO</th>
+                    <th scope="col" class="subgroup" id="h-instagram">INSTAGRAM</th>
                 </tr>
                 <tr>
-                    <td>Ruth Pereira da Silva</td>
-                    <td>Carlos Henrique Correia dos Santos</td>
+                    <td headers="h-redacao">Ruth Pereira da Silva</td>
+                    <td headers="h-instagram">Carlos Henrique Correia dos Santos</td>
                 </tr>
                 <tr>
-                    <td>Sônia Maria de Pádua</td>
-                    <td>Jaquelyne Alves da Silva</td>
+                    <td headers="h-redacao">Sônia Maria de Pádua</td>
+                    <td headers="h-instagram">Jaquelyne Alves da Silva</td>
                 </tr>
                 <tr>
-                    <td>Glébson Pedro da Silva</td>
-                    <td>Valmir Pereira da Silva</td>
+                    <td headers="h-redacao">Glébson Pedro da Silva</td>
+                    <td headers="h-instagram">Valmir Pereira da Silva</td>
                 </tr>
                 </tbody>
 
-                <tbody>
+                <tbody id="grupo-monitoramento-site">
                 <tr>
-                    <th scope="col" class="subgroup">MONITORAMENTO DO CRONOGRAMA</th>
-                    <th scope="col" class="subgroup">ELABORAÇÃO DO SITE</th>
+                    <th scope="col" class="subgroup" id="h-monitoramento">MONITORAMENTO DO CRONOGRAMA</th>
+                    <th scope="col" class="subgroup" id="h-site">ELABORAÇÃO DO SITE</th>
                 </tr>
                 <tr>
-                    <td>Leonardo da Silva Felipe</td>
-                    <td>Carlos Henrique Correia dos Santos</td>
+                    <td headers="h-monitoramento">Leonardo da Silva Felipe</td>
+                    <td headers="h-site">Carlos Henrique Correia dos Santos</td>
                 </tr>
                 <tr>
-                    <td>Sônia Maria de Pádua</td>
-                    <td>Jaquelyne Alves da Silva</td>
+                    <td headers="h-monitoramento">Sônia Maria de Pádua</td>
+                    <td headers="h-site">Jaquelyne Alves da Silva</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td>Júlio Rasec Cabral Marques da Silva</td>
+                    <td headers="h-site">Júlio Rasec Cabral Marques da Silva</td>
                 </tr>
                 </tbody>
 
-                <tbody>
+                <tbody id="grupo-video-dados">
                 <tr>
-                    <th scope="col" class="subgroup">ELABORAÇÃO DO VÍDEO</th>
-                    <th scope="col" class="subgroup">ANÁLISE DE DADOS</th>
+                    <th scope="col" class="subgroup" id="h-video">ELABORAÇÃO DO VÍDEO</th>
+                    <th scope="col" class="subgroup" id="h-dados">ANÁLISE DE DADOS</th>
                 </tr>
                 <tr>
-                    <td>Andryene da Mota Rodrigues</td>
-                    <td>Rayane Mireli Silva Gomes</td>
+                    <td headers="h-video">Andryene da Mota Rodrigues</td>
+                    <td headers="h-dados">Rayane Mireli Silva Gomes</td>
                 </tr>
                 </tbody>
 
