--- a/pages/artigo_perfis.html
+++ b/pages/artigo_perfis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/perfis.css">
-    <title>Perfil Bolsistas</title>
+    <title>Inclusão digital - perfis</title>
 </head>
 <body>
     <canvas id="tech-bg"></canvas>
