refactor: alterar nome da pasta scripts para js

--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
         </div>
     </footer>
 
-    <script src="utils/scripts/script.js"></script>
-    <script src="utils/scripts/animated.js"></script>
+    <script src="utils/js/script.js"></script>
+    <script src="utils/js/animated.js"></script>
 
     <!-- Plugin VLibras -->
     <div vw class="enabled">
