--- a/pages/artigo_perfis.html
+++ b/pages/artigo_perfis.html
@@ -119,7 +119,7 @@
         </div>
     </main>
 
-    <script src="../utils/scripts/animated.js"></script>    
+    <script src="../utils/js/animated.js"></script>    
     
     <!-- Plugin VLibras -->
     <div vw class="enabled">
