refactor: separacao dos tipos de imagens

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="flex">
 
                 <a href="index.html">
-                    <img src="utils/img/logo_site_branca.png" alt="Logo Inclusão Digital - Página Inicial">
+                    <img src="utils/img/logos/logo_site_branca.png" alt="Logo Inclusão Digital - Página Inicial">
                 </a>
 
                 <nav>
@@ -59,7 +59,7 @@
                 <h1>Projeto <span>Inclusão Digital</span></h1>
                 <p>Promovendo inovação e habilidades tecnológicas aos usuários da biblioteca do COMPAZ Miguel Arraes, através de estudantes da ETEPAC</p>
             </div>
-            <img src="utils/img/banner_inclusao_digital.png" alt="Participantes do projeto sentados ao redor de uma mesa branca">
+            <img src="utils/img/banners/banner_inclusao_digital.png" alt="Participantes do projeto sentados ao redor de uma mesa branca">
         </section>
 
         <section class="containers artigos-relacionados-section" id="artigos">
@@ -76,7 +76,7 @@
                     aria-label="Ler artigo completo sobre: O projeto que brilhou">
 
                     <div class="artigo-relacionado-item">
-                        <img src="utils/img/bolsistas_na_etepac.jpg" alt="Equipe de bolsistas do projeto reunida para uma foto de grupo na ETEPAC" class="artigo-relacionado-img">
+                        <img src="utils/img/projeto/bolsistas_na_etepac.jpg" alt="Equipe de bolsistas do projeto reunida para uma foto de grupo na ETEPAC" class="artigo-relacionado-img">
                         <div class="artigo-relacionado-conteudo">
                             <span class="artigo-relacionado-tag">Projeto</span>
                             <h3 class="artigo-relacionado-subtitulo">O projeto que brilhou</h3>
@@ -95,7 +95,7 @@
                     aria-label="Ler artigo completo sobre: ETEPAC e COMPAZ: uma união estratégica e eficaz">
 
                     <div class="artigo-relacionado-item">
-                        <img src="utils/img/etepac_e_compaz.jpeg" alt="Equipe do projeto posando para foto ao redor do letreiro azul do COMPAZ Miguel Arraes" class="artigo-relacionado-img">
+                        <img src="utils/img/projeto/etepac_e_compaz.jpeg" alt="Equipe do projeto posando para foto ao redor do letreiro azul do COMPAZ Miguel Arraes" class="artigo-relacionado-img">
                         <div class="artigo-relacionado-conteudo">
                             <span class="artigo-relacionado-tag">Parceria</span>
                             <h3 class="artigo-relacionado-subtitulo">ETEPAC e COMPAZ: uma união estratégica e eficaz</h3>
@@ -114,7 +114,7 @@
                     aria-label="Ler artigo completo sobre: Impacto e inovação: a força interdisciplinar dos bolsistas">
 
                     <div class="artigo-relacionado-item">
-                        <img src="utils/img/bolsistas_reunidos.jpg" alt="Bolsistas em uma aula sobre Internet das Coisas" class="artigo-relacionado-img">
+                        <img src="utils/img/projeto/bolsistas_reunidos.jpg" alt="Bolsistas em uma aula sobre Internet das Coisas" class="artigo-relacionado-img">
                         <div class="artigo-relacionado-conteudo">
                             <span class="artigo-relacionado-tag">Bolsistas</span>
                             <h3 class="artigo-relacionado-subtitulo">Impacto e inovação: a força interdisciplinar dos bolsistas</h3>
@@ -193,7 +193,7 @@
                         <a href="http://lattes.cnpq.br/5705552727941447" target="_blank" class="btn-sociais" title="Currículo Lattes" aria-label="Currículo Lattes (abre em nova janela)"><i class="bi bi-postcard" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <img src="utils/img/sonia.png" alt="Foto de perfil de Sônia. Ela é uma mulher sorridente, com cabelo liso e escuro e usa óculos, vestindo uma blusa preta com gola de detalhes dourados." class="professor-img"/>
+                <img src="utils/img/rostos/sonia.png" alt="Foto de perfil de Sônia. Ela é uma mulher sorridente, com cabelo liso e escuro e usa óculos, vestindo uma blusa preta com gola de detalhes dourados." class="professor-img"/>
             </div>
             <div class="box_professor">
                 <div class="text_professor prof2">
@@ -211,7 +211,7 @@
                         <a href="http://lattes.cnpq.br/4827824373494382" target="_blank" class="btn-sociais" title="Currículo Lattes" aria-label="Currículo Lattes (abre em nova janela)"><i class="bi bi-postcard" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <img src="utils/img/fagner.png" alt="Foto de perfil de Fagner. Ele é um homem com cabelo escuro encaracolado e barba grisalha, vestindo uma camiseta preta com uma faixa horizontal clara." class="professor-img"/>                
+                <img src="utils/img/rostos/fagner.png" alt="Foto de perfil de Fagner. Ele é um homem com cabelo escuro encaracolado e barba grisalha, vestindo uma camiseta preta com uma faixa horizontal clara." class="professor-img"/>                
             </div>
         </section>
 
@@ -229,55 +229,55 @@
                         <div class="equipe-fotos">
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/andry.jpg" alt="">
+                                <img src="utils/img/rostos/andry.jpg" alt="">
                                 </div>
                                 <h3 class="nome-integrante">Andryene Rodrigues</h3>
                             </div>
                             <div class="foto-container destaque">
                                 <div class="foto">
-                                <img src="utils/img/carl.jpg" alt="">
+                                <img src="utils/img/rostos/carl.jpg" alt="">
                                 </div>
                                 <h3 class="nome-integrante">Carlos Henrique</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/glebson.jpg" alt="">
+                                <img src="utils/img/rostos/glebson.jpg" alt="">
                                 </div>
                                 <h3 class="nome-integrante">Glébson Silva</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/jaquy.jpg" alt="">
+                                <img src="utils/img/rostos/jaquy.jpg" alt="">
                                 </div>
                                 <h3 class="nome-integrante">Jaquelyne Alves</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/julio.jpg" alt="">
+                                <img src="utils/img/rostos/julio.jpg" alt="">
                                 </div>
                                 <h3 class="nome-integrante">Júlio rasec</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/leo.jpg" alt="">
+                                <img src="utils/img/rostos/leo.jpg" alt="">
                             </div>
                             <h3 class="nome-integrante">Leonardo Felipe</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/rayane.jpg" alt="">
+                                <img src="utils/img/rostos/rayane.jpg" alt="">
                                 </div>
                                 <h3 class="nome-integrante">Rayane Gomes</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/ruth.jpg" alt="">
+                                <img src="utils/img/rostos/ruth.jpg" alt="">
                                 </div>
                                 <h3 class="nome-integrante">Ruth Pereira</h3>
                             </div>
                             <div class="foto-container">
                                 <div class="foto">
-                                <img src="utils/img/valmir.jpg" alt="">
+                                <img src="utils/img/rostos/valmir.jpg" alt="">
                                 </div>
                                 <h3 class="nome-integrante">Valmir Pereira</h3>
                             </div>
@@ -314,15 +314,15 @@
                 <div class="blocos-usuarios-container">
 
                     <div class="usuarios-lista">
-                        <img src="utils/img/valmir.jpg" alt="">
-                        <img src="utils/img/andry.jpg" alt="">
-                        <img src="utils/img/carl.jpg" alt="">
-                        <img src="utils/img/jaquy.jpg" alt="">
-                        <img src="utils/img/glebson.jpg" alt="">
-                        <img src="utils/img/rayane.jpg" alt="">
-                        <img src="utils/img/julio.jpg" alt="">
-                        <img src="utils/img/ruth.jpg" alt="">
-                        <img src="utils/img/leo.jpg" alt="">
+                        <img src="utils/img/rostos/valmir.jpg" alt="">
+                        <img src="utils/img/rostos/andry.jpg" alt="">
+                        <img src="utils/img/rostos/carl.jpg" alt="">
+                        <img src="utils/img/rostos/jaquy.jpg" alt="">
+                        <img src="utils/img/rostos/glebson.jpg" alt="">
+                        <img src="utils/img/rostos/rayane.jpg" alt="">
+                        <img src="utils/img/rostos/julio.jpg" alt="">
+                        <img src="utils/img/rostos/ruth.jpg" alt="">
+                        <img src="utils/img/rostos/leo.jpg" alt="">
 
                         <div class="botao-mais"><i class="bi bi-mortarboard-fill"></i></div>
                     </div>
@@ -392,19 +392,19 @@
             
             <div class="box-icons-apoio">
                 <a href="https://ead.educacao.pe.gov.br/" target="_blank" title="ETEPAC">
-                    <img class="img_ete" src="utils/img/etepac_logo.png" alt="Logo da ETEPAC - Escola Técnica Estadual Professor Antônio Carlos Gomes da Costa. (Acessar site)">
+                    <img class="img_ete" src="utils/img/logos/etepac_logo.png" alt="Logo da ETEPAC - Escola Técnica Estadual Professor Antônio Carlos Gomes da Costa. (Acessar site)">
                 </a>
                 <a href="https://compaz.recife.pe.gov.br/compaz-miguel-arraes" target="_blank" title="COMPAZ">
-                    <img src="utils/img/compaz_logo.png" alt="Logo do COMPAZ - Centro Comunitário da Paz. (Acessar site)">
+                    <img src="utils/img/logos/compaz_logo.png" alt="Logo do COMPAZ - Centro Comunitário da Paz. (Acessar site)">
                 </a>
                 <a href="https://www.facepe.br/" target="_blank" title="FACEPE">
-                    <img src="utils/img/facepe_logo.png" alt="Logo da FACEPE - Fundação de Amparo à Ciência e Tecnologia do Estado de Pernambuco. (Acessar site)">
+                    <img src="utils/img/logos/facepe_logo.png" alt="Logo da FACEPE - Fundação de Amparo à Ciência e Tecnologia do Estado de Pernambuco. (Acessar site)">
                 </a>
                 <a>
-                    <img src="utils/img/inovape_logo.png" alt="Logo do Inova PE" title="Inova PE">
+                    <img src="utils/img/logos/inovape_logo.png" alt="Logo do Inova PE" title="Inova PE">
                 </a>
                 <a href="https://portal.educacao.pe.gov.br/" target="_blank" title="Secretária de Pernambuco">
-                    <img src="utils/img/see_horizontal_logo.png" alt="Logo da Secretaria de Ciência, Tecnologia e Inovação - Governo de Pernambuco. (Acessar site)">
+                    <img src="utils/img/logos/see_horizontal_logo.png" alt="Logo da Secretaria de Ciência, Tecnologia e Inovação - Governo de Pernambuco. (Acessar site)">
                 </a>
             </div>
         </section>
@@ -416,7 +416,7 @@
 
             <!-- Logo -->
             <div class="footer-logo">
-                <img src="utils/img/logo_site_branca_verde.png" alt="Logo Inclusão Digital">
+                <img src="utils/img/logos/logo_site_branca_verde.png" alt="Logo Inclusão Digital">
             </div>
 
             <!-- Institucional -->
