--- a/pages/artigo_bolsistas.html
+++ b/pages/artigo_bolsistas.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="../index.html#artigos" class="button-voltar" aria-label="Voltar para a seção Artigos na página inicial"><i class="bi bi-caret-left-fill" aria-hidden="true"></i> <p>voltar</p></a>
-        <img src="../utils/img/logo_site_branca.png" alt="Logo Inclusão Digital">
+        <img src="../utils/img/logos/logo_site_branca.png" alt="Logo Inclusão Digital">
     </header>
 
     <main class="artigo-principal-section">
@@ -29,7 +29,7 @@
                 <span><i class="bi bi-stopwatch"></i> Tempo de leitura: <strong>2 minutos</strong></span>
                 <span>Escrito por: <strong>Sônia Pádua</strong></span>
             </div>
-            <img src="../utils/img/bolsistas_atuando.jpeg" alt="Bolsista do projeto ministra a aula 'Primeiros passos no mundo digital' para uma turma" class="artigo-principal-imagem">
+            <img src="../utils/img/projeto/bolsistas_atuando.jpeg" alt="Bolsista do projeto ministra a aula 'Primeiros passos no mundo digital' para uma turma" class="artigo-principal-imagem">
         </div>
 
         <div class="artigo-principal-corpo">
@@ -43,14 +43,14 @@
             </p>
 
             <h2>Participação e desafios</h2>
-            <img src="../utils/img/participantes_interagindo.jpeg" alt="Bolsista do projeto ajuda uma participante idosa a usar o smartphone." class="artigo-principal-imagem" style="width:80%">
+            <img src="../utils/img/projeto/participantes_interagindo.jpeg" alt="Bolsista do projeto ajuda uma participante idosa a usar o smartphone." class="artigo-principal-imagem" style="width:80%">
             <p>
             A receptividade positiva do COMPAZ foi um diferencial extremamente importante para o bom desenvolvimento das ações e atividades, bem como do desempenho dos bolsistas. Foi notório que o público participante demonstrou interesse e se envolveu nas atividades, participando com entusiasmo, curiosidade e partilha dos seus conhecimentos prévios e vivências do cotidiano. <strong>Os alunos acolheram o projeto com respeito e disposição para aprender,</strong> o que contribuiu para um ambiente de aprendizado colaborativo e inspirador.
             </p>
             <p>
                 Durante o desenvolvimento das atividades, foi necessário superar alguns desafios que surgiram, o que requereu a adaptação dos conteúdos à realidade dos participantes, de acordo com cada especificidade e peculiaridade de cada turma, fruto do engajamento e sensibilidade dos bolsistas em perceber as necessidades dos alunos e seus níveis de aprendizagem. <strong>Desafios que foram superados com paciência, uso de estratégias e ferramentas pedagógicas adequadas</strong> num conjunto de metodologias criativas.
             </p>
-            <img src="../utils/img/dinamicas.jpeg" alt="Alunos participam de uma atividade interativa, com um quiz sendo exibido em um projetor." class="artigo-principal-imagem" style="width:60%">
+            <img src="../utils/img/projeto/dinamicas.jpeg" alt="Alunos participam de uma atividade interativa, com um quiz sendo exibido em um projetor." class="artigo-principal-imagem" style="width:60%">
             <p>
             Entre os pontos fortes do projeto e a aplicação no curso de extensão, destacam-se a integração entre a teoria e a prática com ênfase na transmissão de informações das literaturas e da realidade do indivíduo em ambiente coletivo e comunitário com a troca de conhecimentos entre bolsistas e comunidade. A experiência permitiu que todos crescessem pessoal e profissionalmente, compreendendo o verdadeiro valor da educação como ferramenta de inclusão e transformação social.
             </p>
